Some edits to reflect links to tutorials in the docs
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/contextMenus.html
+++ b/contextMenus.html
@@ -52,6 +52,10 @@ Use the
 <code>"contextMenus"</code>
 </td>
 </tr>
+<tr>
+  <td><strong>Learn more:</strong></td>
+  <td><a href="tut_context_menus.html">Working with the context menu</a></td>
+</tr>
 </tbody>
 </table>
 
