--- a/i18n.html
+++ b/i18n.html
@@ -17,6 +17,28 @@ originalsource: http://developer.chrome.com/trunk/extensions/i18n.html
                   <li><a href="i18n.html#methods">Methods</a><ol>  <li><a href="i18n.html#method-getAcceptLanguages">getAcceptLanguages</a></li>  <li><a href="i18n.html#method-getMessage">getMessage</a></li></ol></li>
                   
           </ol>
+          <table>
+          <tr>
+          <td>
+          <strong>Description:</strong>
+          </td>
+          <td>
+          Use the 
+          <code>chrome.i18n</code>
+           infrastructure to implement internationalization across your extension. 
+          </td>
+          </tr>
+          <tr>
+          <td>
+          <strong>Availability:</strong>
+          </td>
+          <td>Opera 15</td>
+          </tr>          
+          <tr>
+            <td><strong>Learn more:</strong></td>
+            <td><a href="tut_internationalization.html">Internationalization</a></td>
+          </tr>
+          </table>
         </div>
 
 <!--
