--- a/history.html
+++ b/history.html
@@ -57,16 +57,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/history.html
                  </td>
                </tr>
                <tr>
-                 <td><strong>Availability:</strong></td>
-                 <td>Opera 16.</td>
-               </tr>
-               <tr>
                  <td><strong>Permissions:</strong></td>
                  <td><span class="code">"history"</span></td>
                </tr>
                <tr>
                  <td><strong>Learn more:</strong></td>
-                 <td><a href="tut_history.html">Working with the browser history</a></td>
+                 <td><a href="tut_hist.html">Working with the browser history</a></td>
                </tr>
              </table>
      <h2 id="manifest">Manifest</h2>
