--- a/webRequest.html
+++ b/webRequest.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.webRequest
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/webRequest.html
 ---
