--- a/windows.html
+++ b/windows.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.windows
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/windows.html
 ---
