cleaning up images and img references

--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -29,7 +29,7 @@ copyright: opera-ccby
 
 <h2 id="intro">Introduction</h2>
 
-<p><img src="static/images/publishingprocess.png" alt="overview of the publishing process — development, submission, testing, then publishing" /></p>
+<p><img src="static/images/publishingprocess.png" alt="overview of the publishing process — development, submission, testing, then publishing" class="img-polaroid"></p>
 <p class="comment">Figure 1: Overview of the publishing process — development, submission, testing, and publishing.</p>
 
 <p>This guide explains how to publish your extension, which is a multi-step process that begins when you <a href="https://addons.opera.com/developer/upload/">submit your extension for review</a>. The extension moderators then test the extension and publish it in our <a href="https://addons.opera.com/addons/extensions/">Opera extensions catalog</a>. In case there are issues, they reject the extension and send it back to the developer to work on it more and submit it again (see Figure 1).
