fixed navigation issue

--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -83,7 +83,7 @@ copyright: opera-ccby
 
 <p>Choose the distribution license for your extension - the Opera Extensions site allows you to choose between two when uploading.</p>
 
-<p>With the <a href="https://addons.opera.com//developer/license/hosting/">Opera hosting license</a> you keep all content rights, but allow Opera to make the extension available free of charge to users worldwide. Opera can make changes to the extension, if required to make it work properly.</p>
+<p>With the <a href="https://addons.opera.com/developer/license/hosting/">Opera hosting license</a> you keep all content rights, but allow Opera to make the extension available free of charge to users worldwide. Opera can make changes to the extension, if required to make it work properly.</p>
 
 <p>Alternatively, if you prefer an Open Source license that allows anyone to build on your work, you can choose the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0 license</a>.</p>
 
@@ -115,7 +115,7 @@ copyright: opera-ccby
 
 <h3 id="good-icons">Create a good icon</h3>
 
-<p>You also need to have a good icon prepared for your extension. For more information on creating a good icon, along with icon templates, read <a href="http://dev.opera.com/articles/view/creating-effective-opera-extension-icons/">Creating effective Opera Extension icons</a>.</p>
+<p>You also need to have a good icon prepared for your extension. For more information on creating a good icon, along with icon templates, read <a href="tut_icons.html">Creating effective Opera Extension icons</a>.</p>
 
 	<h3 id="good-screenshots">Take good screenshots</h3>
 
