added link to tutorial, fixes to CSS, and fix to history API

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -117,6 +117,10 @@ originalsource: http://developer.chrome.com/trunk/extensions/bookmarks.html
 								<code class="code">"bookmarks"</code>
 						</td>
 				</tr>
+				<tr>
+					<td><strong>Learn more:</strong></td>
+					<td><a href="tut_bookmarks.html">Working with bookmarks</a></td>
+				</tr>
 		</table>
 		<div class="api_reference">
 				<h2 id="types">
