removed unused event_pages and background_pages docs and references

--- a/manifest.html
+++ b/manifest.html
@@ -71,8 +71,8 @@ are <b>name</b> and <b>version</b>.
   "<a href="pageAction.html">page_action</a>": {...},
 
   <em>// Add any of these that you need</em>
-  "<a href="event_pages.html">background</a>": {"persistent": false, ...},
-  "<a href="background_pages.html">background</a>": {"persistent": true, ...},
+  "<a href="tut_architecture_overview.html#the_background_process">background</a>": {"persistent": false, ...},
+  "<a href="tut_architecture_overview.html#the_background_process">background</a>": {"persistent": true, ...},
   "<a href="tut_content_scripts.html">content_scripts</a>": [...],
   "<a href="tut_architecture_overview.html#permissions_and_privileges">content_security_policy</a>": "<em>policyString</em>",
   "<a href="manifest.html#homepage_url">homepage_url</a>": "http://<em>path/to/homepage</em>",
