fixed some history related links

--- a/tut_webnavigation.html
+++ b/tut_webnavigation.html
@@ -105,7 +105,7 @@ case, you will receive repeated <code>onBeforeNavigate</code> and
 The webNavigation API's <code>onCommitted</code> event has a
 <code>transitionType</code> and a <code>transitionQualifiers</code> property.
 The <em>transition type</em> is the same as used in the <a
-href="history.html#transition_types">history API</a> describing how the browser
+href="tut_hist.html#transition_types">history API</a> describing how the browser
 navigated to this particular URL. In addition, several <em>transition
 qualifiers</em> can be returned that further define the navigation.
 </p>
