--- a/webNavigation.html
+++ b/webNavigation.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.webNavigation
+support: 17
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/extensions/webNavigation.html
 ---
