--- a/history.html
+++ b/history.html
@@ -246,7 +246,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/history.html
                                    </code>
                                  </dt>
                                  <dd>
-                                   The <a href='#transition_types'>transition type</a> for this visit from its referrer.
+                                   The <a href='tut_hist.html#transition_types'>transition type</a> for this visit from its referrer.
                                  </dd>
                                </div>
                            </dl>
@@ -465,7 +465,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/history.html
                      </div>
                      <div class="description">
                        <p>
-                         Adds a URL to the history at the current time with a <a href='#transition_types'>transition type</a> of "link".
+                         Adds a URL to the history at the current time with a <a href='tut_hist.html#transition_types'>transition type</a> of "link".
                        </p>
                        <h4>Parameters</h4>
                        <dl>
