--- a/tut_removing_browsingdata.html
+++ b/tut_removing_browsingdata.html
@@ -1,7 +1,6 @@
 ---
 layout: default-withsidebar
 title: Removing browsing data
-support: 18
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/extensions/browsingData.html
 ---
@@ -27,7 +26,7 @@ You must declare the "browsingData" permission in the
 <h2 id="usage">Usage</h2>
 
 <p>
-The simplest use-case for this API is a a time-based mechanism for clearing a
+The simplest use-case for the [`chrome.browsingData` API](browsingData.html) is a a time-based mechanism for clearing a
 user's browsing data. Your code should provide a timestamp which indicates the
 historical date after which the user's browsing data should be removed. This
 timestamp is formatted as the number of milliseconds since the Unix epoch
@@ -109,7 +108,7 @@ something you should be very careful about.
 </li>
 </ul>
 <p>
-We could adjust the previous example to remove only data from protected
+We could adjust the previous example to remove only data from unprotected
 websites as follows:
 </p>
 <pre class="prettyprint">var callback = function () {
@@ -121,7 +120,7 @@ var oneWeekAgo = (new Date()).getTime() - millisecondsPerWeek;
 chrome.browsingData.remove({
 "since": oneWeekAgo,
 <b>"originTypes": {
-"protectedWeb": true
+"unprotectedWeb": true
 }</b>
 }, {
 "appcache": true,
