--- a/tut_privacy.html
+++ b/tut_privacy.html
@@ -1,6 +1,6 @@
 ---
 layout: default-withsidebar
-title: The Privacy API
+title: Controlling privacy features
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/extensions/privacy.html
 ---
@@ -8,7 +8,7 @@ originalsource: http://developer.chrome.com/extensions/privacy.html
 
 <h2 id="manifest">Manifest</h2>
 <p>
-You must declare the <code>"privacy"</code> permission in your extension's manifest to use <a href="privacy.html">Privacy API</a>. For example:
+You must declare the <code>"privacy"</code> permission in your extension's manifest to use the <a href="privacy.html">Privacy API</a>. For example:
 </p>
 
 <pre class="prettyprint" data-filename="manifest.json">
@@ -24,7 +24,7 @@ You must declare the <code>"privacy"</code> permission in your extension's manif
 
 <h2 id="usage">Usage</h2>
 <p>
-Reading the current value of a Chrome setting is straightforward. You'll first need to find the property you're interested in, then you'll call <code>get()</code> on that object in order to retrieve its current value and your extension's level of control. For example, to determine if the browser's Autofill feature is enabled, you'd write:</p>
+Reading the current value of an Opera setting is straightforward. You'll first need to find the property you're interested in, then you'll call <code>get()</code> on that object in order to retrieve its current value and your extension's level of control. For example, to determine if the browser's Autofill feature is enabled, you'd write:</p>
 <p>
 <pre class="prettyprint">
 chrome.privacy.services.autofillEnabled.get({}, function(details) {
@@ -34,7 +34,7 @@ chrome.privacy.services.autofillEnabled.get({}, function(details) {
     console.log('Autofill is off!');
 });</pre>
 
-<p>Changing the value of a setting is a little bit more complex, simply because you first must verify that your extension can control the setting. The user won't see any change to her settings if your extension toggles a setting that is either locked to a specific value by enterprise policies (<code>levelOfControl</code> will be set to "not_controllable"), or if another extension is controlling the value (<code>levelOfControl</code> will be set to "controlled_by_other_extensions"). The <code>set()</code> call will succeed, but the setting will be immediately overridden. As this might be confusing, it is advisable to warn the user when the settings they've chosen aren't practically applied.</p>
+<p>Changing the value of a setting is a little bit more complex, simply because you first must verify that your extension can control the setting. The user won't see any change to her settings if your extension toggles a setting that is either locked to a specific value by enterprise policies (<code>levelOfControl</code> will be set to <code>"not_controllable"</code>), or if another extension is controlling the value (<code>levelOfControl</code> will be set to <code>"controlled_by_other_extensions"</code>). The <code>set()</code> call will succeed, but the setting will be immediately overridden. As this might be confusing, it is advisable to warn the user when the settings they've chosen aren't practically applied.</p>
 
 <p>This means that you ought to use the <code>get()</code> method to determine your level of access, and then only call <code>set()</code> if your extension can grab control over the setting (in fact if your extension can't control the setting it's probably a good idea to visually disable the functionality to reduce user confusion):</p>
 
@@ -52,7 +52,7 @@ chrome.privacy.services.autofillEnabled.get({}, function(details) {
 </pre>
 
 
-<p class="note">If you're interested in changes to a setting's value, add a listener to its onChange event. Among other uses, this will allow you to warn the user if a more recently installed extension grabs control of a setting, or if enterprise policy overrides your control. To listen for changes to Autofill's status, for example, the following code would suffice:</p>
+<p class="note">If you're interested in changes to a setting's value, add a listener to its <code>onChange</code> event. Among other uses, this will allow you to warn the user if a more recently installed extension grabs control of a setting, or if enterprise policy overrides your control. To listen for changes to Autofill's status, for example, the following code would suffice:</p>
 
 <pre class="prettyprint">
 chrome.privacy.services.autofillEnabled.onChange.addListener(
@@ -63,6 +63,6 @@ chrome.privacy.services.autofillEnabled.onChange.addListener(
     });
 </pre>
 
-<p><b>Note:</b> Full details about extensions' ability to control ChromeSettings can be found under <a href="types.html#type-ChromeSetting"><code>chrome.types.ChromeSetting</code></a>. Also check out the properties of <a href="http://localhost:1337/privacy.html#property-services"><code>chrome.privacy.services</code></a> to see which features the privacy API controls.</p>
+<p><b>Note:</b> Full details about extensions' ability to control settings can be found under <a href="types.html#type-ChromeSetting"><code>chrome.types.ChromeSetting</code></a>. Also check out the properties of <a href="http://localhost:1337/privacy.html#property-services"><code>chrome.privacy.services</code></a> to see which features the privacy API controls.</p>
 
 
