--- a/tut_contentsettings.html
+++ b/tut_contentsettings.html
@@ -1,6 +1,6 @@
 ---
 layout: default-withsidebar
-title: Working with Content Settings
+title: Site-specific customization
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/extensions/contentSettings.html
 ---
@@ -8,7 +8,7 @@ originalsource: http://developer.chrome.com/extensions/contentSettings.html
 
 <h2 id="manifest">Manifest</h2>
 <p>
-You must declare the <code>"contentSettings"</code> permission in your extension's manifest to use <a href="contentsettings.html">contentSettings API</a>. For example:
+You must declare the <code>"contentSettings"</code> permission in your extension's manifest to use <a href="contentsettings.html">contentSettings API</a>, which allows you to do per-site customizations. For example:
 </p>
 
 <pre class="prettyprint" data-filename="manifest.json">
