added link to API docs

--- a/tut_webnavigation.html
+++ b/tut_webnavigation.html
@@ -60,7 +60,7 @@ fired. This event can fire any time after <code>onDOMContentLoaded</code>.
 <p>
 There is no defined ordering between events of the <a
 href="webRequest.html">webRequest API</a> and the events of the
-webNavigation API. It is possible that webRequest events are still received for
+<a href="webNavigation.html">webNavigation API</a>. It is possible that webRequest events are still received for
 frames that already started a new navigation, or that a navigation only
 proceeds after the network resources are already fully loaded.
 </p>
