--- a/tut_removing_browsingdata.html
+++ b/tut_removing_browsingdata.html
@@ -5,6 +5,9 @@ copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/extensions/browsingData.html
 ---
 
+<h2>Introduction</2h>
+<p>You can use the <a href="browsingData.html">chrome.browsingData API</a> to remove browsing data from a user's local profile.</p>
+
 <h2 id="manifest">Manifest</h2>
 
 <p>
@@ -26,7 +29,7 @@ You must declare the "browsingData" permission in the
 <h2 id="usage">Usage</h2>
 
 <p>
-The simplest use-case for the [`chrome.browsingData` API](browsingData.html) is a a time-based mechanism for clearing a
+The simplest use-case for the <a href="browsingData.html">chrome.browsingData API</a> is a a time-based mechanism for clearing a
 user's browsing data. Your code should provide a timestamp which indicates the
 historical date after which the user's browsing data should be removed. This
 timestamp is formatted as the number of milliseconds since the Unix epoch
