--- a/tut_removing_browsingdata.html
+++ b/tut_removing_browsingdata.html
@@ -5,7 +5,7 @@ copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/extensions/browsingData.html
 ---
 
-<h2>Introduction</2h>
+<h2>Introduction</h2>
 <p>You can use the <a href="browsingData.html">chrome.browsingData API</a> to remove browsing data from a user's local profile.</p>
 
 <h2 id="manifest">Manifest</h2>
