added 'requirements' in manifest doc
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/manifest.html
+++ b/manifest.html
@@ -23,6 +23,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/manifest.html
                 <li><a href="manifest.html#key">key</a></li>
                 <li><a href="manifest.html#name">name</a></li>
                 <li><a href="manifest.html#permissions">permissions</a></li>
+                <li><a href="manifest.html#requirements">requirements</a></li>
                 <li><a href="manifest.html#version">version</a></li>
                 <li><a href="manifest.html#manifest_version">manifest_version</a></li>
                 <li><a href="manifest.html#web_accessible_resources">web_accessible_resources</a></li>
@@ -78,6 +79,7 @@ are <b>name</b> and <b>version</b>.
   "<a href="manifest.html#key">key</a>": "<em>publicKey</em>",
   "<a href="tut_architecture_overview.html#the_options_page">options_page</a>": "<em>aFile</em>.html",
   "<a href="declare_permissions.html">permissions</a>": [...],
+  "<a href="manifest.html#requirements">requirements</a>": {...},
   "<a href="autoupdate.html">update_url</a>": "http://<em>path/to/updateInfo</em>.xml",
   "<a href="manifest.html#web_accessible_resources">web_accessible_resources</a>": [...],
   "<a href="manifest.html#sandbox">sandbox</a>": [...]
@@ -250,6 +252,7 @@ see <a href="i18n.html">Internationalization</a> for details.
 &lt;img src=&quot;opera://favicon/http://www.google.com/&quot;&gt;
 </pre>
 
+<h3 id="requirements">requirements</h3>
 <p>
 The "3D" requirement denotes GPU hardware acceleration.
 The "webgl" requirement refers to the
