Changes in the description table.
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/downloads.html
+++ b/downloads.html
@@ -172,12 +172,25 @@ originalsource: http://developer.chrome.com/extensions/downloads.html
                </ol>
         </div>
         
-        <p id="classSummary">
- Use the 
-<code>chrome.downloads</code>
- API to programmatically initiate, monitor, manipulate, and search for downloads. 
-</p>
-
+        <table class="intro" id="intro">
+          <tr>
+            <td class="title">Description:</td>
+            <td>
+                 Use the <code>chrome.downloads</code> API to programmatically initiate,
+                 monitor, manipulate, and search for downloads.
+                        <br>
+            </td>
+          </tr>
+           <tr>
+            <td class="title">Permissions:</td>
+            <td>
+                <span class="code">
+                "downloads"
+                        </span>
+                <br>
+            </td>
+          </tr>
+        </table>
        
        <div class="api_reference">
            <h2 id="types">Types</h2>
